tests/paczka1/fuzzy1/29797832.err
Error in line 2: JGKMrCH S886 6,+
Error in line 10: s4Yjt4bcga S886 9@,4
Error in line 5: JGKMrCH S886 10,3
Error in line 15: s4Yjt4bcga S886 59,8
Error in line 30: 8yHCf S 5  5,2
Error in line 29: 3a6 A679 7,0
Error in line 14: 8yHCf S886 50,4
Error in line 38: JGKMrCH A99 -2,0
